--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
+    "ngx-spinner": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
